2005-02-08  Roland Illig  <roland.illig@gmx.de>

	* widget.h: Renamed define_label to buttonbar_set_label. Renamed
	define_label_data to buttonbar_set_label_data. Renamed
	redraw_labels to buttonbar_redraw. Provided compatibility macros
	to enable a smooth transition between the old and the new names.
	* widget.c: Likewise.

2005-02-08  Roland Illig  <roland.illig@gmx.de>

	* *.c: Reordered header inclusion.

2005-02-08  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* ext.c (regex_command): Eliminate g_string_*().

2005-02-08  Roland Illig  <roland.illig@gmx.de>

	* dialog.h: Moved and reformatted #definitions.
	* execute.h: Likewise.
	* mouse.h: Likewise.
	* widget.h: Moved constants to the appropriate places (just
	before the variable they will be used with).
	* widget.c: HISTORY_FILE_NAME was not needed in widget.h,
	so it has been made private to this file.

2005-02-07  Roland Illig  <roland.illig@gmx.de>

	* unixcompat.h: Emit warnings for the fallback case of the
	major/minor/makedev macros.

2005-02-07  Roland Illig  <roland.illig@gmx.de>

	* view.c: Changed type of view->blocks from int to size_t.
	* view.c: Removed unused parameters from local functions.
	* view.c: Reordered #include files.

2005-02-07  Roland Illig  <roland.illig@gmx.de>

	* ext.c: Improved message formatting.

2005-02-06  Roland Illig  <roland.illig@gmx.de>

	* widget.h: Added a new function button_get_text.
	* widget.c: Likewise.

2005-02-06  Roland Illig  <roland.illig@gmx.de>

	* achown.c (get_ownership): Simplified the code. Now it is
	more independent of the WButton internals.
	* achown.c (get_ownership): Renamed to update_ownership.
	* achown.c (update_permissions): Update the permission widgets
	without accessing WButton->text directly.
	* achown.c (print_flags): Use update_permissions.
	* achown.c (chown_info_update): Likewise.

2005-02-05  Roland Illig  <roland.illig@gmx.de>

	* util.h (msglen): Converted from a function to a procedure.